// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography.H3 should render default markup when no props are passed 1`] = `
.c0 {
  font-weight: 400;
  margin: 2px 0;
  color: rgba(38,38,38,1);
  display: inline;
  line-height: 1.25;
  font-size: 20px;
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 24px;
  }
}

<h3
  className="c0 h3 h3--regular h3--onyx-base"
>
  Hello world
</h3>
`;

exports[`Typography.H3 should render with a custom color prop that lacks variants 1`] = `
.c0 {
  font-weight: 400;
  margin: 2px 0;
  color: #026cdf;
  display: inline;
  line-height: 1.25;
  font-size: 20px;
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 24px;
  }
}

<h3
  className="c0 h3 h3--regular h3--brand-base"
  color="brand"
>
  Hello world
</h3>
`;

exports[`Typography.H3 should render with a custom weight prop 1`] = `
.c0 {
  font-weight: 400;
  margin: 2px 0;
  color: rgba(38,38,38,1);
  display: inline;
  line-height: 1.25;
  font-weight: 600;
  font-size: 20px;
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 24px;
  }
}

<h3
  className="c0 h3 h3--semiBold h3--onyx-base"
>
  Hello world
</h3>
`;

exports[`Typography.H3 should render with a textTransform prop 1`] = `
.c0 {
  font-weight: 400;
  margin: 2px 0;
  color: rgba(38,38,38,1);
  text-transform: uppercase;
  display: inline;
  line-height: 1.25;
  font-size: 20px;
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 24px;
  }
}

<h3
  className="c0 h3 h3--regular h3--onyx-base"
>
  Hello world
</h3>
`;

exports[`Typography.H3 should render with custom color and variant props 1`] = `
.c0 {
  font-weight: 400;
  margin: 2px 0;
  color: #904eba;
  display: inline;
  line-height: 1.25;
  font-size: 20px;
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 24px;
  }
}

<h3
  className="c0 h3 h3--regular h3--accent01-dark"
  color="accent01"
>
  Hello world
</h3>
`;

exports[`Typography.H3 should render without a theme 1`] = `
.c0 {
  font-weight: 400;
  margin: 2px 0;
  color: rgba(38,38,38,1);
  display: inline;
  line-height: 1.25;
  font-size: 20px;
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 24px;
  }
}

<h3
  className="c0 h3 h3--regular h3--onyx-base"
/>
`;

exports[`Typography.H3 should render without children 1`] = `
.c0 {
  font-weight: 400;
  margin: 2px 0;
  color: rgba(38,38,38,1);
  display: inline;
  line-height: 1.25;
  font-size: 20px;
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 24px;
  }
}

<h3
  className="c0 h3 h3--regular h3--onyx-base"
/>
`;
